# pizza-os

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  bochs.sh  bochsrc  build.sh  build_test.sh  bx_enh_dbg.ini  clean.sh  default.make  doxyfile.in  floppy.sh  floppy_qemu.sh  grub.sh  makefile  pizzaos.img  qemu.sh  syslinux.cfg  test.sh  toolchain.cmake  toolchain.userspace.cmake  tools.py
Default/: makefile  sources.mk
Default/src/kernel/: subdir.mk
docs/: kernel_design.uxf  mkdocs.yml
docs/docs/: index.md
docs/docs/overview/: booting.md  bootloader.md  introduction.md
isodir.test/boot/grub/: grub.cfg
isodir/boot/grub/: grub.cfg
src/apps/: CMakeLists.txt  makefile
src/apps/mcp/: CMakeLists.txt  main.c  makefile
src/apps/test01/: CMakeLists.txt  main.c
src/docs/: filesystem.md  interrupts.md  mainpage.md
src/initrd/: Makefile  makefile
src/kernel/: .main.c.swp  CMakeLists.txt  Makefile  boot.asm  bus.h  cdefs.h  config.h  config.hpp  cpu.h  cpu.hpp  debug.hpp  devices.c  devices.h  elf.hpp  errors.hpp  fstypes.c  fstypes.h  gdbstub.h  interrupt.c  interrupt.h  interrupt.hpp  interrupts.c  interrupts.h  io.h  io.hpp  kernel.c  kernel.cpp  kernel.h  kernel.hpp  linker.ld  main.c  mainpage.md  makefile  mem.c  mem.c.bak  mem.c.old  mem.h  multiboot.h  multiboot.hpp  page.h  (+24 more)
src/kernel/api/: keyboard.c  keyboard.h  keymap.c  keymap.h  keyscan.h  scancodes.h
src/kernel/api/keymaps/: enUS.h  nlBE.h
src/kernel/arch/i386/: asmfn.asm  asmfn.h  config.h  cpu.c  cpu.h  i386_asm.asm  i386_asm.h  i386_cpu.c  i386_cpu.h  i386_gdbstub.c  i386_gdbsupport.c  i386_gdbsupport.h  i386_interrupt.asm  i386_interrupt.c  i386_interrupt.h  i386_io.c  i386_io.h  i386_page.c  i386_page.h  i386_paging.c  i386_paging.h  i386_pic.c  i386_pic.h  i386_threads.c  i386_threads.h  interrupt.asm  interrupt.c  interrupt.h  io.c  io.h  page.c  page.h  pic.c  pic.h
src/kernel/arch/i386/dev/: pit.c  pit.h  vga.c  vga.h
src/kernel/arch/pc/: asmfn.asm  asmfn.h  cpu.c  cpu.h  io.c  io.h  page.c  page.c.bak.2  page.c.old  page.h
src/kernel/arch/pc/dev/: vga.c  vga.h
src/kernel/bus/: filesystem.h  keyboard.h  ps2.c  ps2.h  vga.c  vga.h
src/kernel/collections/: iterator.c  iterator.h  list.c  list.h
src/kernel/cpu/: cpu.asm  cpu.cpp  gdt.cpp  tss.cpp  tss.hpp
src/kernel/debug/: common.cpp  printf.cpp  serial.cpp
src/kernel/dev/: devices.c  devices.h  eserial.c  eserial.h  null.c  null.h  pckbd.c  pckbd.h  pcps2.c  pcps2.h  ps2.c  ps2.h  tmpfs.c  tmpfs.h  tty.c  tty.h  zero.c  zero.h
src/kernel/elf/: elf.cpp  elf_dump.cpp  elf_extract.cpp  elf_prog.cpp  elf_sect.cpp
src/kernel/interrupt/: gate.cpp  handler.cpp  handler.hpp  handler_factory.cpp  handler_factory.hpp  handlers.asm  interrupt.cpp  pic.cpp
src/kernel/io/: io.cpp
src/kernel/kernel/: alloc.cpp  alloc.hpp  kernel_alloc.cpp
src/kernel/libc/: crti.asm  math.cpp  math.hpp  stdarg.hpp  stdint.hpp  string.cpp  string.hpp  virtual.cpp
src/kernel/multiboot/: memory_size.cpp  multiboot.cpp
src/kernel/paging/: alloc.cpp  directory.cpp  init.cpp  paging_alloc.cpp  paging_debug.cpp  paging_directory.cpp  paging_init.cpp  paging_table.cpp  table.cpp
src/kernel/pmem/: alloc.cpp  init.cpp  pmem_alloc.cpp  pmem_init.cpp  pmem_states.cpp  states.cpp
src/kernel/process/: init.cpp  process.cpp  process_exec.cpp  process_handles.cpp  process_init.cpp  process_kill.cpp  process_mem.cpp  process_stack.cpp  process_switch.asm  process_switch.cpp
src/kernel/ramdisk/: ramdisk.cpp  ramdisk_mbt.cpp  tarfile.cpp
src/kernel/reader/: tarreader.cpp
src/kernel/safe/: safe_describe.cpp  safe_memcpy.cpp  safe_strlen.cpp  safe_strncpy.cpp  safe_util.cpp
src/kernel/scheduler/: scheduler.cpp
src/kernel/syscall/: syscall.cpp  syscall_debug.cpp  syscall_exit.cpp  syscall_process.cpp  syscall_ramdisk.cpp  syscall_vfs.cpp
src/kernel/test/: test.cpp  test_asserts.cpp  test_syscall.cpp  test_syscall_payload.asm
src/kernel/thread/: lock.c  lock.h  mutex.c  mutex.h  signal.c  signal.h
src/kernel/vfs/: vfs_fd.cpp  vfs_init.cpp  vfs_mount.cpp  vfs_private.hpp  vfs_process.cpp
src/libc/: math.c  math.h  stdio.c  stdio.h  stdlib.c  string.c  string.h
src/pkg/: Makefile  includes.make  makefile
src/pkg/libc/: Makefile  Makefile.include  include.make  include.mk  makefile  malloc.c  package.mk  stdlib.h  string.c  string.h
src/pkg/libc/include/: string.h  syscall_nums.h
src/pkg/libc/include/pizzaos/: syscall.h
src/pkg/libc/pizzaos/: stdint.h  syscall.c
src/pkg/mcp/: Makefile  Makefile.include  include.mk  main.c  makefile  package.mk
src/pkg/pizzaos/: Makefile.include  include.mk
src/pkg/pizzaos/include/pizzaos/: limits.h
src/stdlib/: CMakeLists.txt
src/stdlib/libc/: CMakeLists.txt
src/stdlib/libc/common/: CMakeLists.txt  math.c  math.h  stdint.h  stdio.c
src/stdlib/libc/crt/: CMakeLists.txt  Makefile  makefile
src/stdlib/libc/kernel/: CMakeLists.txt  Makefile  kstring.h  math.c  stdint.h  string.c  string.h  syscall_nums.h
src/stdlib/libc/user/: CMakeLists.txt  linker.ld  makefile  start.asm  stdlib.c  string.c  string.h
src/stdlib/libc/user/pizzaos/: syscall.asm  syscall.c  syscall.h
src/stdlib/libcxx/: CMakeLists.txt
src/stdlib/libcxx/common/: CMakeLists.txt  cstddef
src/stdlib/libcxx/common/bak/: cstdint  cstring  memory  string  vector
src/stdlib/libcxx/kernel/: CMakeLists.txt  Makefile  cmath  cstdint  cstring  virtual.cpp
src/stdlib/libcxx/user/: CMakeLists.txt  vector
tools/: calculator.py  progress_make.lua  test_runner.lua
